Downgrade baseline to Java 8 (#37)
* Downgrade baseline to Java 8

This change lowers the bytecode baseline of `ksef-fop` to Java 8, enabling the library to run on older JVMs, while still requiring JDK 21 or later for the build environment.

To achieve this, the following adjustments were made:

* **Records** (currently used only in test code) have been replaced with Lombok-generated Java beans to maintain Java 8 compatibility.
* **`String.isBlank()`** has been reimplemented in an internal helper utility, avoiding the need to introduce an additional dependency such as `commons-lang3`.

Fixes #36

* Fix: replace `defaultIfBlank` with `defaultIfEmpty`